<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="administration_courses">Edit Courses</string>
    <string name="administration_courses_name">Name</string>
    <string name="administration_courses_new">New Course</string>
    <string name="administration_new_post">Post something</string>
    <string name="administration_newpost_author">Author</string>
    <string name="administration_newpost_content">Content</string>
    <string name="administration_newpost_error_dateformat">The date format is not valid</string>
    <string name="administration_newpost_error_emptyfield">This field cannot be empty</string>
    <string name="administration_newpost_error_image">Could not read the image</string>
    <string name="administration_newpost_image">Image</string>
    <string name="administration_newpost_post">Post</string>
    <string name="administration_newpost_removedate">Remove on… (YYYY/MM/DD hh:mm)</string>
    <string name="administration_newpost_showdate">Show after… (YYYY/MM/DD hh:mm)</string>
    <string name="administration_newpost_title">Title</string>
    <string name="administration_schoolclass_course">Course</string>
    <string name="administration_schoolclass_error_cantmatch">The names must be different</string>
    <string name="administration_schoolclass_new_name">Name</string>
    <string name="administration_schoolclass_save">Save</string>
    <string name="administration_schoolclass_year">Year</string>
    <string name="administration_schoolclasses">Edit School Classes</string>
    <string name="administration_schoolclasses_new">New Class</string>
    <string name="administration_subjects">Edit Subjects</string>
    <string name="administration_subjects_newsubject">New Subject</string>
    <string name="administration_subjects_save">Save</string>
    <string name="administration_subjects_synonyms">Synonyms (separated by new lines)</string>
    <string name="administration_subjects_title">Subject</string>
    <string name="app_name">NFApp</string>
    <string name="error_no_internet_connection">You need a working Internet Connection in order to use this app</string>
    <string name="login_button_facebook">Continue with Facebook</string>
    <string name="login_button_google">Continue with Google</string>
    <string name="login_button_login">Login</string>
    <string name="login_button_register">Register</string>
    <string name="login_class_hint">Class</string>
    <string name="login_error_generic">Something went wrong during the authentication process. Please try again</string>
    <string name="login_error_label">The passwords do not match</string>
    <string name="login_login_label">I already have an account</string>
    <string name="login_name_hint">Name</string>
    <string name="login_password_hint">Password</string>
    <string name="login_register_label">I do not have an account</string>
    <string name="login_repeatPassword_hint">Repeat Password</string>
    <string name="login_surname_hint">Surname</string>
    <string name="login_username_hint">Email Address</string>
    <string name="menu_administration">Administration</string>
    <string name="menu_home">Home</string>
    <string name="menu_news">News</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_sharing">Sharing</string>
    <string name="administration_promoteuser">Promote User to Administrator</string>
    <string name="login_hint_course">Course</string>
    <string name="profile_btt_logout">Logout</string>
    <string name="profile_btt_deletepic">Delete Profile Picture</string>
</resources>
